k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evaluation-service
  labels:
    name: evaluation-service
